fixed sparklineCard overflow

--- a/src/app/cryptocurrencies/[symbol]/components/YouMayAlsoLike/components/SparklineCard/styles.module.css
+++ b/src/app/cryptocurrencies/[symbol]/components/YouMayAlsoLike/components/SparklineCard/styles.module.css
@@ -3,6 +3,8 @@
   padding: var(--space-xs) var(--space-s);
   aspect-ratio: 7/4;
 
+  overflow-x: hidden;
+
   border: var(--space-6xs) solid var(--grey-light);
   border-radius: var(--radius);
 }
